[package]
name = "userman-auth"
version = "0.1.0"
license = "MIT"
description = "User Manager"
homepage = "https://github.com/tkenda/userman-auth-rust"
repository = "https://github.com/tkenda/userman-auth-rust"
documentation = "README.md"
readme = "README.md"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
tokio = { version = "1.20", features = ["full"] }
mongodb = { version = "2.3", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.25"
log = "0.4.17"
haikunator = "0.1.2"
thiserror = "1.0.32"
serde_json = "1.0.91"